--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,13 @@
-certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.3
-cloudpickle==2.2.1
-colorama==0.4.6
-contourpy==1.0.7
-cycler==0.11.0
 dash==2.10.2
-dash-bootstrap-components==1.4.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-docopt==0.6.2
-Flask==2.2.5
-fonttools==4.39.4
-idna==3.4
-importlib-metadata==6.6.0
-importlib-resources==5.12.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
+dash_bootstrap_components==1.4.1
+dash_table==5.0.0
+eli5==0.13.0
 joblib==1.2.0
-kiwisolver==1.4.4
-llvmlite==0.40.1rc1
-MarkupSafe==2.1.3
 matplotlib==3.7.1
-numba==0.57.0
-numpy==1.23.5
-packaging==23.1
-pandas==2.0.2
-Pillow==9.5.0
-pipreqs==0.4.13
+mlxtend==0.22.0
+numpy==1.23.2
+pandas==1.5.3
 plotly==5.15.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2023.3
-requests==2.31.0
-scikit-learn==1.2.2
-scipy==1.10.1
+scikit_learn==1.2.2
 shap==0.41.0
-six==1.16.0
-slicer==0.0.7
-tenacity==8.2.2
-threadpoolctl==3.1.0
-tqdm==4.65.0
-tzdata==2023.3
-urllib3==2.0.3
-Werkzeug==2.2.3
-yarg==0.1.9
-zipp==3.15.0
+xgboost==1.7.6
